<?xml version="1.0"?>
<package>
  <name>robotiq_simple_driver</name>
  <version>0.0.0</version>
  <description>Simple python driver for controlling robotiq grippers over modbus.</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>python-pymodbus</run_depend>

</package>
